--- a/OHIO/login.html
+++ b/OHIO/login.html
@@ -12,28 +12,28 @@
           <h1 class="logo-text" style="color:white;" >Go-Travel</h1>
         </div>
         <div class="nav-links">
-          <a style="font-weight: bold; color:white;" href="">Home</a>
+          <a style="font-weight: bold; color:white;" href="index.html">Home</a>
           <a style="font-weight: bold; color:white;" href="#">Login</a>
         </div>
       </div>
       <div class="login-container">
-        <h1>Login</h1>
+        <p style="font-size: 100px; font-weight:normal;">Login</p><br>
         <form>
           <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" id="email" name="email" required>
-            <p class="flavor-text">We'll never share your email with anyone else</p>
+            <label for="email" >Email address</label><br><br>
+            <input type="email" id="email" name="email" required><br><br>
+            <p class="flavor-text">We'll never share your email with anyone else</p><br>
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <label for="password">Password</label><br><br>
+            <input type="password" id="password" name="password" required><br>
           </div>
-          <div class="form-group">
-            <label for="remember-me">
-              <input type="checkbox" id="remember-me" name="remember-me"> Remember me
-            </label>
+          <div class="form-group"><br>
+            <h for="remember-me">
+              <input type="checkbox" id="remember-me" name="remember-me" style="background-color: transparent;">   Remember me
+            </h>
           </div>
-          <div class="form-group">
+          <div class="form-group"><br>
             <button type="submit">Submit</button>
           </div>
         </form>
