--- a/OHIO/login.html
+++ b/OHIO/login.html
@@ -18,7 +18,7 @@
       </div>
       <div class="login-container">
         <p style="font-size: 100px; font-weight:normal;">Login</p><br>
-        <form>
+        <form action="post_page_user.html" method="post" target="_blank"> <!-- this is path i put temporarily for the navigation -->
           <div class="form-group">
             <label for="email" >Email address</label><br><br>
             <input type="email" id="email" name="email" required><br><br>
@@ -34,7 +34,7 @@
             </h>
           </div>
           <div class="form-group"><br>
-            <button type="submit">Submit</button>
+            <button type="submit" >Submit</button>
           </div>
         </form>
       </div>
