--- a/OHIO/post_page_user.html
+++ b/OHIO/post_page_user.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+
 </head>
 <body> 
 
@@ -17,14 +20,20 @@
           <h1 class="logo-text" style="color:white;" >Go-Travel</h1>
         </div>
         <div class="search-container">
-            <form action="#" method="get">
-              <label for="search">Search:</label>
-              <input type="text" id="search" name="search" placeholder="Search...">
-            </form>
+          <form action="#" method="get">
+            <label for="search">Search</label>
+            <input type="text" id="search" name="search" placeholder="Search for trips, user, or blog">        
+          </form>
         </div>
         <div class="nav-links">
-            <a style="font-weight: bold; color:white;" href="index.html">Home</a>
-            <img src="CSS/Images/profile.png" alt="Profile Image" style="border-radius: 50%; float: right; width: 30px; height: 30px;">
+          <i class="bi bi-house-door text-white"></i>
+          <a style="font-weight: bold; color:white; font-size:small;" href="index.html">HOME</a>
+          <i class="bi bi-plus text-white"></i>
+          <a style="font-weight: bold; color:white; font-size:small;" href="index.html">CREATE POST</a>
+          <img src="CSS/Images/profile.png" alt="Profile Image" style="border-radius: 50%; float: right; width: 30px; height: 30px;">
+          <a style="font-weight: bold; color:white; font-size:medium;" href="index.html">James19</a>
+          <i class="bi bi-box-arrow-left text-white"></i>
+          <a style="font-weight: bold; color:white; font-size:small;" href="index.html">LOG OUT</a>
         </div>
         
     </div>
