--- a/OHIO/post_page_user.html
+++ b/OHIO/post_page_user.html
@@ -10,6 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+    <script>
+      function search() {
+          var query = document.getElementById("search-bar").value;
+          if (query !== "") {
+              window.location.href = "search.html?query=" + encodeURIComponent(query);
+          }
+      }
+    </script>
 
 </head>
 <body> 
@@ -20,11 +28,11 @@
           <h1 class="logo-text" style="color:white;" >Go-Travel</h1>
         </div>
         <div class="search-container">
-          <form action="#" method="get">
-            <label for="search">Search</label>
-            <input type="text" id="search" name="search" placeholder="Search for trips, user, or blog">        
-          </form>
-        </div>
+          <form onsubmit="search(); return false;">
+            <label for="search">Search:</label>
+            <input type="text" id="search-bar" placeholder="Search for trips, user, or blog">
+        </form>
+      </div>
         <div class="nav-links">
           <i class="bi bi-house-door text-white"></i>
           <a style="font-weight: bold; color:white; font-size:small;" href="index.html">HOME</a>
