--- a/OHIO/searchUser.html
+++ b/OHIO/searchUser.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Search Page</title>
+    <title>User Search Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/search.css">
@@ -26,10 +26,6 @@
             <img src="CSS/Images/logo.png" alt="GoTravel Logo">
             <h1 class="logo-text" style="color:white;">Go-Travel</h1>
         </div>
-        <div class="nav-links">
-            <a style="font-weight: bold; color:white;" href="index.html">Home</a>
-            <a style="font-weight: bold; color:white;" href="login.html">Login</a>
-        </div>
     </div>
 
     <div class="search-container">
@@ -39,7 +35,21 @@
         </form>
     </div>
 
-      <div class="container">
+    </div>
+    <div class="nav-links">
+        <i class="bi bi-house-door text-white"></i>
+        <a style="font-weight: bold; color:white; font-size:small;" href="index.html">HOME</a>
+        <i class="bi bi-plus text-white"></i>
+        <a style="font-weight: bold; color:white; font-size:small;" href="index.html">CREATE POST</a>
+        <img src="CSS/Images/profile.png" alt="Profile Image"
+            style="border-radius: 50%; float: right; width: 30px; height: 30px;">
+        <a style="font-weight: bold; color:white; font-size:medium;" href="index.html">James19</a>
+        <i class="bi bi-box-arrow-left text-white"></i>
+        <a style="font-weight: bold; color:white; font-size:small;" href="index.html">LOG OUT</a>
+    </div>
+
+
+    <div class="container">
         <a href="viewpost.html" class="white-box">
           <div class="box-text">
             <h2>Bangkok</h2>
