--- a/bg login/Login.html
+++ b/bg login/Login.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="Login.css">
 </head>
 
-<form>
+<form action="http://127.0.0.1:5500/OHIO/post_page.html">
     <h1>LOG IN</h1>
-    <
+    <h4>Do not have an account? <a href="http://127.0.0.1:5500/bg%20login/Register.html">Create an account</a></h4>
     <div class="inset br">
     <p>
-      <label for="email">EMAIL ADDRESS</label>
-      <input type="text" name="email" id="email">
+      <label for="email">Email Address*</label>
+      <input type="text" name="email" id="email"required>
     </p>
     <p>
-      <label for="password">PASSWORD</label>
-      <input type="password" name="password" id="password">
+      <label for="password">Password*</label>
+      <input type="password" name="password" id="password"required>
     </p>
     <p>
       <input type="checkbox" name="remember" id="remember">
@@ -25,7 +25,12 @@
     </p>
     </div>
     <p class="p-container">
-      <span>Forgot password?</span>
-      <input type="submit" name="go" id="go" value="Log in">
+      <span><a href="http://127.0.0.1:5500/bg%20login/Forgotpassword.html">Forgot Password?</a></span>
+      <button type="submit">Log in</button>
     </p>
+
+
+    
   </form>
+
+</html>
