Finish for basic function

--- a/OHIO/search.html
+++ b/OHIO/search.html
@@ -28,7 +28,7 @@
         </div>
         <div class="nav-links">
             <a style="font-weight: bold; color:white;" href="index.html">Home</a>
-            <a style="font-weight: bold; color:white;" href="login.html">Login</a>
+            <a style="font-weight: bold; color:white;" href="http://127.0.0.1:5500/bg%20login/Login.html">Login</a>
         </div>
     </div>
 
