--- a/bg login/Login.html
+++ b/bg login/Login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Login.css">
 </head>
 
-<form action="http://127.0.0.1:5500/OHIO/post_page.html">
+<form action="http://127.0.0.1:5500/OHIO/post_page_user.html">
     <h1>LOG IN</h1>
     <h4>Do not have an account? <a href="http://127.0.0.1:5500/bg%20login/Register.html">Create an account</a></h4>
     <div class="inset br">
