--- a/ProfilePage/index.html
+++ b/ProfilePage/index.html
@@ -37,7 +37,7 @@
       <i class="bi bi-plus text-white"></i>
       <a style="font-weight: bold; color:white; font-size:small;" href="http://127.0.0.1:5500/OHIO/new_post.html">CREATE POST</a>
       <img src="images/profile/userprofile.jpg" alt="Profile Image" style="border-radius: 50%; float: right; width: 30px; height: 30px;">
-      <a style="font-weight: bold; color:white; font-size:medium;" href="index.html">James19</a>
+      <a style="font-weight: bold; color:white; font-size:medium;" href="http://127.0.0.1:5500/analytic%20page/index.html">James19</a>
       <i class="bi bi-box-arrow-left text-white"></i>
       <a style="font-weight: bold; color:white; font-size:small;" href="index.html">LOG OUT</a>
     </div>
