--- a/OHIO/index.html
+++ b/OHIO/index.html
@@ -13,8 +13,8 @@
             <h1 class="logo-text">Go-Travel</h1>
           </div>
           <div class="nav-links">
-            <a style="font-weight: bold;" href="index.html">Home</a>
-            <a style="font-weight: bold;" href="http://127.0.0.1:5500/bg%20login/Login.html">Login</a>
+            <a style="font-weight: bold;" href="../OHIO/index.html">Home</a>
+            <a style="font-weight: bold;" href="../Login/Login.html">Login</a>
           </div>
         </div>
       
@@ -22,7 +22,7 @@
         <div class="title">
             <h1>TRAVEL<br>EXPERIENCE FOR <br> OTHERS</h1>
         </div>
-        <button class="enter-button" onclick="window.location.href='post_page.html'">Enter</button>
+        <button class="enter-button" onclick="window.location.href='../OHIO/post_page.html'">Enter</button>
     </div>
 </body>
 </html>
