--- a/OHIO/search.html
+++ b/OHIO/search.html
@@ -27,8 +27,8 @@
             <h1 class="logo-text" style="color:white;">Go-Travel</h1>
         </div>
         <div class="nav-links">
-            <a style="font-weight: bold; color:white;" href="index.html">Home</a>
-            <a style="font-weight: bold; color:white;" href="http://127.0.0.1:5500/bg%20login/Login.html">Login</a>
+            <a style="font-weight: bold; color:white;" href="../OHIO/index.html">Home</a>
+            <a style="font-weight: bold; color:white;" href="../Login/Login.html">Login</a>
         </div>
     </div>
 
@@ -40,7 +40,7 @@
     </div>
 
       <div class="container">
-        <a href="viewpost.html" class="white-box">
+        <a href="../OHIO/viewpost_anon.html" class="white-box">
           <div class="box-text">
             <h2>Bangkok</h2>
             <p>This is a story about my trip to Bankok. . .</p>
@@ -50,7 +50,7 @@
           </div>
         </a>
       
-        <a href="http://127.0.0.1:5500/ProfilePage/index.html" class="white-box">
+        <a href="../ProfilePage/index.html" class="white-box">
           <div class="box-text">
             <h2>Bobby</h2>
             <p>5 years experience of travelling. . .</p>
@@ -60,7 +60,7 @@
           </div>
         </a>
       
-        <a href="http://127.0.0.1:5500/ProfilePage/index.html" class="white-box">
+        <a href="../ProfilePage/index.html" class="white-box">
           <div class="box-text">
             <h2>Bella</h2>
             <p>new to travelling. . .</p>
