--- a/Analytic/index.html
+++ b/Analytic/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+
+    <script>
+      function search() {
+          var query = document.getElementById("search-bar").value;
+          if (query !== "") {
+              window.location.href = "../OHIO/search.html?query=" + encodeURIComponent(query);
+          }
+      }
+  </script>
 </head>
 <body>
 
@@ -16,20 +25,20 @@
           <h1 class="logo-text" style="color:white;" >Go-Travel</h1>
         </div>
         <div class="search-container">
-          <form action="#" method="get">
-            <label for="search">Search</label>
-            <input type="text" id="search" name="search" placeholder="Search for trips, user, or blog">        
-          </form>
+          <form onsubmit="search(); return false;">
+            <label for="search">Search:</label>
+            <input type="text" id="search-bar" placeholder="Search for trips, user, or blog">
+        </form>
         </div>
         <div class="nav-links">
           <i class="bi bi-house-door text-white"></i>
-          <a style="font-weight: bold; color:white; font-size:small;" href="http://127.0.0.1:5500/OHIO/post_page_user.html">HOME</a>
+          <a style="font-weight: bold; color:white; font-size:small;" href="../OHIO/post_page_user.html">HOME</a>
           <i class="bi bi-plus text-white"></i>
-          <a style="font-weight: bold; color:white; font-size:small;" href="http://127.0.0.1:5500/OHIO/new_post.html">CREATE POST</a>
+          <a style="font-weight: bold; color:white; font-size:small;" href="../OHIO/new_post.html">CREATE POST</a>
           <img src="userprofile.jpg" alt="Profile Image" style="border-radius: 50%; float: right; width: 30px; height: 30px;">
-          <a style="font-weight: bold; color:white; font-size:medium;" href="http://127.0.0.1:5500/ProfilePage/index.html">James19</a>
+          <a style="font-weight: bold; color:white; font-size:medium;" href="../ProfilePage/index.html">James19</a>
           <i class="bi bi-box-arrow-left text-white"></i>
-          <a style="font-weight: bold; color:white; font-size:small;" href="index.html">LOG OUT</a>
+          <a style="font-weight: bold; color:white; font-size:small;" href="../OHIO/index.html">LOG OUT</a>
         </div>
         
     </div>
