--- a/OHIO/new_post.html
+++ b/OHIO/new_post.html
@@ -74,12 +74,12 @@
       </div>
         <div class="nav-links">
           <i class="bi bi-house-door text-white"></i>
-          <a style="font-weight: bold; color:white; font-size:small;" href="http://127.0.0.1:5500/OHIO/post_page_user.html">HOME</a>
+          <a style="font-weight: bold; color:white; font-size:small;" href="../OHIO/post_page_user.html">HOME</a>
           <i class="bi bi-plus text-white"></i>
           <img src="CSS/Images/profile.png" alt="Profile Image" style="border-radius: 50%; float: right; width: 30px; height: 30px;">
-          <a style="font-weight: bold; color:white; font-size:medium;" href="http://127.0.0.1:5500/ProfilePage/index.html">James19</a>
+          <a style="font-weight: bold; color:white; font-size:medium;" href="../ProfilePage/index.html">James19</a>
           <i class="bi bi-box-arrow-left text-white"></i>
-          <a style="font-weight: bold; color:white; font-size:small;" href="index.html">LOG OUT</a>
+          <a style="font-weight: bold; color:white; font-size:small;" href="../OHIO/index.html">LOG OUT</a>
         </div>
     </div>
     
