Fixed SearchUser navigation

--- a/OHIO/index.html
+++ b/OHIO/index.html
@@ -22,7 +22,7 @@
         <div class="title">
             <h1>TRAVEL<br>EXPERIENCE FOR <br> OTHERS</h1>
         </div>
-        <button class="enter-button" onclick="window.location.href='../OHIO/post_page.html'">Enter</button>
+        <button class="enter-button" onclick="window.location.href='../OHIO/post_page_anon.html'">Enter</button>
     </div>
 </body>
 </html>
