--- a/OHIO/viewpost_user.html
+++ b/OHIO/viewpost_user.html
@@ -15,7 +15,7 @@
       function search() {
           var query = document.getElementById("search-bar").value;
           if (query !== "") {
-              window.location.href = "search.html?query=" + encodeURIComponent(query);
+              window.location.href = "../OHIO/searchUser.html?query=" + encodeURIComponent(query);
           }
       }
     </script>
