--- a/ProfilePage/index.html
+++ b/ProfilePage/index.html
@@ -22,7 +22,7 @@
       function search() {
           var query = document.getElementById("search-bar").value;
           if (query !== "") {
-              window.location.href = "../OHIO/search.html?query=" + encodeURIComponent(query);
+              window.location.href = "../OHIO/searchUser.html?query=" + encodeURIComponent(query);
           }
       }
   </script>
