--- a/OHIO/editPost.html
+++ b/OHIO/editPost.html
@@ -14,7 +14,7 @@
       function search() {
           var query = document.getElementById("search-bar").value;
           if (query !== "") {
-              window.location.href = "search.html?query=" + encodeURIComponent(query);
+              window.location.href = "../OHIO/searchUser.html?query=" + encodeURIComponent(query);
           }
       }
     </script>
@@ -54,8 +54,8 @@
         <img src="CSS/Images/bangkok.jpg" alt="Placeholder image">
       </div>
       <div class="box-text">
-        <h2>White Box</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at sapien id mi placerat laoreet in vel purus. Duis finibus risus nec lorem placerat, nec rhoncus justo molestie.</p>
+        <h2>Bangkok</h2>
+        <p>This is details about my trip 3 days in bangkok. </p>
       </div>
       <div class="box-buttons">
         <a href="#">
