--- a/OHIO/index.html
+++ b/OHIO/index.html
@@ -13,8 +13,8 @@
             <h1 class="logo-text">Go-Travel</h1>
           </div>
           <div class="nav-links">
-            <a style="font-weight: bold;" href="../OHIO/index.html">Home</a>
-            <a style="font-weight: bold;" href="../Login/Login.html">Login</a>
+            <a style="font-weight: bold;" href="../OHIO/index.html">HOME</a>
+            <a style="font-weight: bold;" href="../Login/Login.html">LOGIN</a>
           </div>
         </div>
       
