--- a/OHIO/post_page_anon.html
+++ b/OHIO/post_page_anon.html
@@ -31,8 +31,8 @@
         </form>
       </div>
         <div class="nav-links">
-            <a style="font-weight: bold; color:white;" href="../OHIO/index.html">Home</a>
-            <a style="font-weight: bold; color:white;" href="../Login/Login.html">Login</a>            
+            <a style="font-weight: bold; color:white;" href="../OHIO/index.html">HOME</a>
+            <a style="font-weight: bold; color:white;" href="../Login/Login.html">LOGIN</a>            
         </div>
     </div>
       
