--- a/OHIO/viewpost_anon.html
+++ b/OHIO/viewpost_anon.html
@@ -32,8 +32,8 @@
           </form>
         </div>
         <div class="nav-links">
-            <a style="font-weight: bold; color:white;" href="index.html">Home</a>
-            <a style="font-weight: bold; color:white;" href="http://127.0.0.1:5500/bg%20login/Login.html">Login</a>            
+            <a style="font-weight: bold; color:white;" href="index.html">HOME</a>
+            <a style="font-weight: bold; color:white;" href="../Login/Login.html">LOGIN</a>            
         </div>
     </div>
       
