--- a/ProfilePage/index.html
+++ b/ProfilePage/index.html
@@ -46,7 +46,7 @@
       <i class="bi bi-plus text-white"></i>
       <a style="font-weight: bold; color:white; font-size:small;" href="../OHIO/new_post.html">CREATE POST</a>
       <img src="images/profile/userprofile.jpg" alt="Profile Image" style="border-radius: 50%; float: right; width: 30px; height: 30px;">
-      <a style="font-weight: bold; color:white; font-size:medium;" href="../Analytic/index.html">James19</a>
+      <a style="font-weight: bold; color:white; font-size:medium;" href="../ProfilePage/index.html">James19</a>
       <i class="bi bi-box-arrow-left text-white"></i>
       <a style="font-weight: bold; color:white; font-size:small;" href="../OHIO/index.html">LOG OUT</a>
     </div>
@@ -70,6 +70,7 @@
           <div class="card-header bg-transparent text-center">
             <img class="profile_img" src="images/profile/userprofile.jpg" alt="student dp">
             <h3 class="h2 mb-0 mr-2" contenteditable="true" id="name" onkeydown="handleNameEdit(event)">Ishmam Ahasan Samin</h3>
+            <a href="../Analytic/index.html"><h6>Analytics</h6></a>
           </div>
           <div class="card-body">
             <p class="mb-0"><strong class="pr-1">Location: </strong>Singapore</p>
@@ -145,10 +146,10 @@
         <div class="card-wrapper swiper-wrapper">
           <div class="card swiper-slide">
             <div class="image-box">
-              <img src="images/showImg/Paris.jpg" alt="" />
+              <a href="../OHIO/editPost.html"><img src="images/showImg/Paris.jpg" alt="" /></a>
             </div>
             <div class="profile-details">
-              <img src="images/profile/userprofile.jpg" alt="" />
+              <img src="images/profile/userprofile.jpg" alt="" /></a>
               <div class="name-job">
                 <h3 class="name">Trip to Bangkok</h3>
                 <h4 class="job">5 February, 2021</h4>
